# termux_python

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py  termux.py
common/: utils.py
termux/: __init__.py  termux.py
termux/common/: utils.py
