[tool.poetry]
name = "termux_python"
version = "0.1.0"
description = "termux python bindings"
authors = ["mlvl42 <melvil.guillaume@gmail.com>"]
license = "MIT"
repository = "https://github.com/mlvl42/termux_python"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
